--- a/api-project/style/style.css
+++ b/api-project/style/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(206, 235, 206);
+    background-color: rgb(244, 250, 255);
     margin: 0;
 }
 :root{
@@ -7,8 +7,10 @@ body{
 }
 #heading{
     position: absolute;
+    width: 100vw;
+    text-align: center;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -49%);
     font-family: 'Bungee', cursive;
     /* font-family: 'VT323', monospace; */
     color: var(--textcolor);
@@ -27,9 +29,18 @@ body{
     }
 }
 #carrotcastle{
+    position: absolute;
     height: 75vh;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 24vh;
+    left: 50%;
+    transform: translate(-50%, -49%);
+    z-index: 1;
+    bottom: -35vh;
 }
+#grass{
+    position: absolute;
+    bottom: 0;
+    height: 100vh;
+    width: 100vw;
+    z-index: 0;
+  }
+  
