--- a/api-project/style/style.css
+++ b/api-project/style/style.css
@@ -1,187 +1,151 @@
 body{
-    background-color: rgb(253, 254, 255);
+    background-color: rgb(241, 241, 241);
     margin: 0;
-    overflow: hidden;
+    overflow-x: hidden;
+    font-family: 'Bungee', cursive;
 }
 :root{
     --textcolor: rgb(95, 35, 16);
 }
-#heading{
-    position: absolute;
-    width: 90vw;
+#icon{
+    width: 4vw;
+    top: .2vw;
+    left: 1vw;
+    background-color: white;
+}
+#header{
+    position: fixed;
+    background-color: white;
+    display: flex;
+    flex-direction: row;
+    padding: .5vw;
+    z-index: 5;
+    width: 100vw;
+    box-shadow: 0px 5px 5px rgb(143, 143, 143);
+}
+.stuffinheader{
     text-align: center;
-    left: 50.71%;
-    transform: translate(-50%, -49%);
-    font-family: 'Bungee', cursive;
-    /* font-family: 'VT323', monospace; */
-    color: var(--textcolor);
-    font-size: 2vw;
-    animation: bob .70s ease-out infinite;
-}
-
-@keyframes bob{
-    0% {
-        top: 8vh;
-      }
-    30%{
-        top: 8.25vh;
-    }
-    100%{
-        top: 8vh;
-    }
-}
-#carrotcastle{
-    position: absolute;
-    height: 75vh;
-    left: 50%;
-    transform: translate(-50%, -49%);
-    z-index: 1;
-    bottom: -35vh;
-    transform-origin:center ;
-    background-image: url('../carrotcastle.png');
-    aspect-ratio: 1.90;
-    background-size: 100% 100%;
-    background-attachment: local;
-    z-index: 4;
-    transform-style: preserve-3d;
-}
-#bun1{
-    position: relative;
-    left:27%;
-    height: 16vh;
-    z-index: 0;
-    transform: translatez(-100px);
-}
-#bun3{
-    position: relative;
-    left:52%;
-    height: 16vh;
-    z-index: 0;
-    transform: translatez(-100px);
-}
-#bunflag{
-    position: relative;
-    left:28%;
-    height: 16vh;
-    z-index: 0;
-    transform: translatez(-100px);
-    /* top: -3%; */
-}
-.flagbefore{
-    rotate: 90deg;
-    top: 13.5%;
-}
-.flagraised{
-    animation: raiseflag .5s forwards;
-}
-@keyframes raiseflag{
-    from{
-        rotate: 90deg;
-        top: 13.5%;
-    }
-    to{
-        rotate: 0deg;
-        top: -3%;
-    }
-}
-.bunbefore{
-    top: 37%;
-}
-.bungoup{
-    animation: bungoup .5s;
-    animation-fill-mode: forwards;
-}
-@keyframes bungoup{
-    from{
-        top: 37%;
-    }
-    to{
-        top: 20%;
-    }
-}
-.hide{
-    opacity: 0;
-    transition-duration: 1s;
-}
-.up{
-    bottom: -35vh;
-}
-.down{
-    animation: godown 1.5s ease-in;
-    animation-fill-mode: forwards;
-}
-@keyframes godown{
-    0%{
-        bottom: -35vh;
-    }
-    100%{
-        bottom: 60vh;
-    }
-}
-#grass{
-    position: absolute;
-    bottom: 0;
-    height: 100vh;
-    width: 100vw;
-    z-index: 0;
-}
-.grassdown{
-    bottom: 0;      
-}
-.grassup{
-    animation: grassup 1.55s ease-in forwards;
-}
-@keyframes grassup{
-    from{
-        bottom: 0;  
-    }
-    to{
-        bottom: 100vh;
-    }
-}
-.grass2down{
-    bottom: -100vh;      
-}
-.grass2up{
-    animation: grass2up 1.55s ease-in forwards;
-}
-@keyframes grass2up{
-    from{
-        bottom: -100vh;  
-    }
-    to{
-        bottom: 0;
-    }
-}
-#grass2{
-    position: absolute;
-    
-    background: linear-gradient(#dde3a4, rgb(255, 255, 255));
-
-    /* background-color: #dde3a4; */
-    height: 100vh;
-    width: 100vw;
-    bottom: -100vh;
-    z-index: -1;
-}
-#skipbtncon{
-    position: absolute;
-    right: 1vw;    
-    top: 90vh;
-    padding: 1vw;
-}
-#skipbtn{
-    font-family: 'Bungee', cursive;
+    margin: 0;
+    color: rgb(105, 66, 53);
     font-size: 1vw;
-    color: var(--textcolor);
-    background-color: #dde3a47c;
-    border: none;
-    border-radius: 30px;
-    transition-duration: .25s;
+    margin-left: 1.5vw;
 }
-#skipbtn:hover{
+h2{
+    text-align: justify;
+}
+.stuffinheader:hover{
     scale: 120%;
 }
-#skipbtn:not(:hover){
+#dinoimg{
+    /* width: 100vw; */
+    margin-top: -1vh;
+    z-index: -1;
+    width: 92vw;
+    /* background-color: rgb(255, 255, 255); */
+    /* background-color: #dde3a4; */
+    /* margin-left: 10vw; */
+    padding: 4vw;
+    padding-bottom: 2vw;
+    
+}
+#homepagenextbutton{
+    background-color: transparent;
+    color: rgb(105, 66, 53);
+    border: none;
+    font-size: 3vw;
+    font-family: 'Bungee', cursive;
+    margin-top: -4vw;
+    margin-left: 22vw;
+    transition-duration: .2s;
+    height: 6.5vw;
+}
+#homepagenextbutton:hover{
+    scale: 120%;
+}
+#homepagenextbutton:not(:hover){
+    scale: 100%;
+}
+#homepagetext{
+    position: absolute;
+    top: 7.5vw;
+    color: rgb(105, 66, 53);
+    font-size: 2.5vw;
+    margin-left: 3vw;
+    background-color: rgba(255, 255, 255, 0.856);
+    box-shadow: .5vw .3vw 0px rgb(143, 143, 143);
+    padding: 1vw;
+    border-radius: 30px;
+    padding-top: 0;
+    padding-bottom: 0;
+    right: 13vw;
+}
+#subtext{
+    margin-top: -2vw;
+    font-size: 1vw;
+    width: 28vw;
+}
+#homepage{
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 1vw;
+}
+#con{
+    display: flex;
+    flex-direction: column;
+}
+#adslmao{
+    display: flex;
+    /* background-color: white; */
+    margin-top: -3.5vw;
+    color: var(--textcolor);
+    padding: 2.5vw;
+    padding-top: 1vw;
+    padding-left: 10vw;
+    padding-right: 10vw;
+    font-size: 1vw;
+}
+.thesenamesdontmakesenseimsorry{
+    color: rgb(105, 66, 53);
+    font-family: 'Inconsolata', monospace;
+}
+#subtitle1{
+    font-size: 2vw;
+    margin-bottom: 0;
+    font-family: 'Bungee', cursive;
+    margin-top: 2vw;
+    font-size: 2vw;
+    margin-bottom: 1.3vw;
+}
+#dndstartersetpic{
+    width: 20vw;
+}
+#subtext2{
+    font-size: 1vw;
+    margin: 0;
+}
+h3{
+    padding: 0;
+    margin: 0;
+}
+#createyourcharacterbtn2{
+    font-size: .7vw;
+    font-family: 'Bungee', cursive;
+    color: var(--color);
+    --b: .15vw;   /* border thickness */
+    --s: .45em; /* size of the corner */
+    --color: rgb(163, 103, 35);
+    padding: calc(.5em + var(--s)) calc(.9em + var(--s));
+    --_p: var(--s);
+    background:
+      conic-gradient(from 90deg at var(--b) var(--b),#0000 90deg,var(--color) 0)
+      var(--_p) var(--_p)/calc(100% - var(--b) - 2*var(--_p)) calc(100% - var(--b) - 2*var(--_p));
+    border: 0;
+    transition-duration: .2s;
+    margin-top: .8vw;
+}
+#createyourcharacterbtn2:hover{
+    scale: 110%;
+}
+#createyourcharacterbtn2:not(hover){
     scale: 100%;
 }
