--- a/api-project/style/style.css
+++ b/api-project/style/style.css
@@ -29,9 +29,9 @@ body{
     color: rgb(105, 66, 53);
     font-size: 1vw;
     margin-left: 1.5vw;
-}
-h2{
-    text-align: justify;
+    font-family: 'Bungee', cursive;
+    background-color: transparent;
+    border: 0;
 }
 .stuffinheader:hover{
     scale: 120%;
@@ -123,7 +123,7 @@ h2{
     font-size: 1vw;
     margin: 0;
 }
-h3{
+h1{
     padding: 0;
     margin: 0;
 }
